--- a/mapates.html
+++ b/mapates.html
@@ -16,7 +16,7 @@
 			</div>
 		<a >Sua Promoção</a>
 		</div>
-		<div id=mapa class=mapa1></div>
+		<div id=mapa class=mapa></div>
 	</div>
 	    
 	<script>
