--- a/foto4.html
+++ b/foto4.html
@@ -6,8 +6,9 @@
 		Camera
 	</title>
 	<head>
-	<link rel="stylesheet" type="text/css" href="css/estilo.css" media="screen" />
-		
+		<meta charset="utf-8" />
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+		<link rel="stylesheet" type="text/css" href="css/estilo.css" media="screen" />
 	</head>
 	
 <body>
